// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitProcessPack > every emitted text file matches its snapshot > .claude-plugin/plugin.json 1`] = `
"{
  "name": "process-factory-meta",
  "description": "Operate the process factory: take in problems, gate every spec on operator approval, and deploy emitted packs only through draft PRs that carry their metrics manifests.",
  "version": "0.1.0",
  "keywords": [
    "process-factory-operations",
    "first-principles",
    "theory-of-constraints",
    "dmaic"
  ],
  "category": "process-pack",
  "domain": "process-factory-operations"
}
"
`;

exports[`emitProcessPack > every emitted text file matches its snapshot > gates/spec-approval-gate.md 1`] = `
"# spec-approval-gate — gate spec stub

> **Not live gate code.** This file is a deterministic spec stub emitted by
> the process-pack emitter. Live hook/gate scripts (concrete event binding,
> matcher authoring, false-fire evaluation, lazy-agent judging) are a later
> factory task; until then this document is the gate's contract.

- Kind: gate
- Disposition: generate — generated by the process factory as part of this pack
- Governance phase at birth: shadow

## Intent (L2 rationale)

The constraint is policy-shaped: only a blocking gate turns approval-before-emit from a remembered rule into an enforced one.

## Event

Unbound in this stub. The concrete Claude Code hook event is selected when
the live gate script is authored; the firing point it must implement is
described by the matcher intent below.

## Matcher intent

Block progress exactly while any condition guarded by the traced truths
below is unsatisfied — and never otherwise (false-fire evaluation gates the live version).

## Enforcement

- Phase "shadow": observe and record violations; never block.
- Decision rule: If any CTQ records a defect in a scan window, file an improvement proposal in the needs-review queue; two consecutive defective windows escalate to the operator.
- Control plan: every factory scan run, at least once per week — file an improvement proposal for operator review; never auto-apply.
- Lazy-agent test: before this gate leaves shadow, a judge must answer
  "what is the cheapest path past this gate?" with evidence; cosmetic-
  compliance answers fail the gate (design §6).

## Provenance — traced truths (verbatim)

- **t1** [constraint]: "A process spec must be operator-approved before emission."
  - Rationale: HITL stop-gate at the end of the spec stage; a factory that emits unapproved specs removes the human from the only structural checkpoint.

Traced constraints (Theory of Constraints analysis):

- **c1** [policy]: "Nothing enforces spec-approval-before-emit today: emission is reachable without an operator-approved spec."

## Relationships

- depends_on: factory-intake
- complements: (none)
- composes_with: (none)
- supersedes: (none)
- binds_tools: (none)
"
`;

exports[`emitProcessPack > every emitted text file matches its snapshot > hooks/deploy-discipline-hook.md 1`] = `
"# deploy-discipline-hook — hook spec stub

> **Not live hook code.** This file is a deterministic spec stub emitted by
> the process-pack emitter. Live hook/gate scripts (concrete event binding,
> matcher authoring, false-fire evaluation, lazy-agent judging) are a later
> factory task; until then this document is the hook's contract.

- Kind: hook
- Disposition: generate — generated by the process factory as part of this pack
- Governance phase at birth: shadow

## Intent (L2 rationale)

Deploy discipline must fire on the deploy action itself: a hook on the deploy path checks draft-PR-only and metrics-manifest presence at the moment they can still be enforced.

## Event

Unbound in this stub. The concrete Claude Code hook event is selected when
the live hook script is authored; the firing point it must implement is
described by the matcher intent below.

## Matcher intent

Fire exactly when a condition guarded by the traced truths below is at
risk — and never otherwise (false-fire evaluation gates the live version).

## Enforcement

- Phase "shadow": observe and record violations; never block.
- Decision rule: If any CTQ records a defect in a scan window, file an improvement proposal in the needs-review queue; two consecutive defective windows escalate to the operator.
- Control plan: every factory scan run, at least once per week — file an improvement proposal for operator review; never auto-apply.

## Provenance — traced truths (verbatim)

- **t2** [constraint]: "Every emitted pack must carry its metrics manifest (CTQs, baseline, decision rule, governance phase)."
  - Rationale: Sensing is distributed: a pack born without its manifest can never report outcomes, so it can never be improved honestly.
- **t3** [constraint]: "Deploys land only as draft PRs into engram-plugins, never as direct pushes."
  - Rationale: D-016/D-065: every deployment gets adversarial review; the factory holds no merge authority.

## Relationships

- depends_on: spec-approval-gate
- complements: (none)
- composes_with: (none)
- supersedes: (none)
- binds_tools: (none)
"
`;

exports[`emitProcessPack > every emitted text file matches its snapshot > manifest/forge-handoff.json 1`] = `
"[]
"
`;

exports[`emitProcessPack > every emitted text file matches its snapshot > manifest/metrics.json 1`] = `
"{
  "ctqs": [
    {
      "id": "ctq1",
      "persona": "factory operator",
      "metric": "spec-approval gate compliance",
      "specLimit": "100% of emitted packs trace to an operator-approved spec",
      "defectDefinition": "an emitted pack whose spec has no recorded operator approval"
    },
    {
      "id": "ctq2",
      "persona": "pack reviewer",
      "metric": "pack gate pass rate",
      "specLimit": "every deployed pack passes mechanical validators before its draft PR opens",
      "defectDefinition": "a draft PR opened from a pack that failed a mechanical validator or lacks its metrics manifest"
    },
    {
      "id": "ctq3",
      "persona": "factory operator",
      "metric": "scan cadence",
      "specLimit": "every registry entry is scanned at least once per declared cadence window",
      "defectDefinition": "a registry entry with no scan record inside its cadence window"
    }
  ],
  "baseline": "unmeasured",
  "decisionRule": "If any CTQ records a defect in a scan window, file an improvement proposal in the needs-review queue; two consecutive defective windows escalate to the operator.",
  "controlPlan": {
    "monitoringCadence": "every factory scan run, at least once per week",
    "response": "file an improvement proposal for operator review; never auto-apply"
  },
  "governancePhase": "shadow",
  "knobs": [
    {
      "name": "scanMinSampleSize",
      "purpose": "Minimum outcome records required before a scan may file an improvement proposal — the factory refuses to propose from noise.",
      "range": {
        "min": 10,
        "max": 100
      },
      "default": 20
    }
  ]
}
"
`;

exports[`emitProcessPack > every emitted text file matches its snapshot > process-spec.json 1`] = `
"{
  "meta": {
    "name": "process-factory-meta",
    "version": "0.1.0",
    "problemStatement": "Operate the process factory: take in problems, gate every spec on operator approval, and deploy emitted packs only through draft PRs that carry their metrics manifests.",
    "domain": "process-factory-operations",
    "scalingTier": "medium",
    "lineage": {
      "parentVersion": null,
      "improvementProposals": []
    }
  },
  "assessment": {
    "triageVerdict": {
      "verdict": "create_new",
      "evidence": "No existing process pack operates the factory: src/factory/ pipeline stages do not exist yet, and no plugin in engram-plugins covers intake, spec approval, or factory deploy discipline."
    },
    "inventory": [
      {
        "name": "principles decomposition core",
        "kind": "library",
        "location": "src/core/",
        "status": "built"
      },
      {
        "name": "skill-forge",
        "kind": "plugin",
        "location": "engram-plugins/plugins/skill-forge",
        "status": "built"
      },
      {
        "name": "process factory pipeline and meta pack",
        "kind": "pipeline",
        "location": "",
        "status": "gap"
      }
    ],
    "constraint": {
      "id": "c1",
      "flowSteps": [
        "assess",
        "decompose",
        "contract",
        "spec",
        "emit",
        "deploy",
        "measure",
        "improve"
      ],
      "statement": "Nothing enforces spec-approval-before-emit today: emission is reachable without an operator-approved spec.",
      "type": "policy",
      "exploitOptions": [
        "Add a blocking spec-approval gate between the spec and emit stages"
      ],
      "subordinateOptions": [
        "Sequence emit and deploy strictly behind the approval gate; no stage reads a spec that has not passed it"
      ],
      "elevateOptions": [
        "Make approval evidence cheap to review (validator results attached to the spec) so the gate never becomes the queue"
      ],
      "evidence": "The design's HITL stop-gate (spec section 4) is stated policy only; no mechanism in the repo blocks emit on approval."
    }
  },
  "foundations": {
    "truths": [
      {
        "id": "t1",
        "type": "constraint",
        "statement": "A process spec must be operator-approved before emission.",
        "rationale": "HITL stop-gate at the end of the spec stage; a factory that emits unapproved specs removes the human from the only structural checkpoint."
      },
      {
        "id": "t2",
        "type": "constraint",
        "statement": "Every emitted pack must carry its metrics manifest (CTQs, baseline, decision rule, governance phase).",
        "rationale": "Sensing is distributed: a pack born without its manifest can never report outcomes, so it can never be improved honestly."
      },
      {
        "id": "t3",
        "type": "constraint",
        "statement": "Deploys land only as draft PRs into engram-plugins, never as direct pushes.",
        "rationale": "D-016/D-065: every deployment gets adversarial review; the factory holds no merge authority."
      }
    ],
    "assumptions": [],
    "rejected": [],
    "subtasks": [
      {
        "id": "s1",
        "description": "Receive an operator problem statement and record it as a factory intake request (problem, domain, requested scaling tier).",
        "servesTruths": [
          "t1"
        ],
        "dependsOn": []
      },
      {
        "id": "s2",
        "description": "Hold every compiled spec at the approval gate until the operator explicitly approves it.",
        "servesTruths": [
          "t1"
        ],
        "dependsOn": [
          "s1"
        ]
      },
      {
        "id": "s3",
        "description": "Deploy approved packs as draft PRs only, verifying the metrics manifest is present before the PR opens.",
        "servesTruths": [
          "t2",
          "t3"
        ],
        "dependsOn": [
          "s2"
        ]
      }
    ],
    "coverageMap": [
      {
        "dimension": "operator intake",
        "handledBy": "s1",
        "exclusionReason": ""
      },
      {
        "dimension": "spec approval gating",
        "handledBy": "s2",
        "exclusionReason": ""
      },
      {
        "dimension": "deploy discipline",
        "handledBy": "s3",
        "exclusionReason": ""
      },
      {
        "dimension": "outcome scanning and improvement proposals",
        "handledBy": "",
        "exclusionReason": "Covered by the scan-cadence CTQ and control plan, not a v0 subtask; the scan stage arrives with the factory pipeline itself."
      }
    ],
    "survey": []
  },
  "contract": {
    "ctqs": [
      {
        "id": "ctq1",
        "persona": "factory operator",
        "metric": "spec-approval gate compliance",
        "specLimit": "100% of emitted packs trace to an operator-approved spec",
        "defectDefinition": "an emitted pack whose spec has no recorded operator approval"
      },
      {
        "id": "ctq2",
        "persona": "pack reviewer",
        "metric": "pack gate pass rate",
        "specLimit": "every deployed pack passes mechanical validators before its draft PR opens",
        "defectDefinition": "a draft PR opened from a pack that failed a mechanical validator or lacks its metrics manifest"
      },
      {
        "id": "ctq3",
        "persona": "factory operator",
        "metric": "scan cadence",
        "specLimit": "every registry entry is scanned at least once per declared cadence window",
        "defectDefinition": "a registry entry with no scan record inside its cadence window"
      }
    ],
    "baseline": "unmeasured",
    "decisionRule": "If any CTQ records a defect in a scan window, file an improvement proposal in the needs-review queue; two consecutive defective windows escalate to the operator.",
    "controlPlan": {
      "monitoringCadence": "every factory scan run, at least once per week",
      "response": "file an improvement proposal for operator review; never auto-apply"
    },
    "governancePhase": "shadow"
  },
  "roles": [
    {
      "id": "agent-s1",
      "name": "intake-operator",
      "subtaskId": "s1",
      "instructions": "Receive the operator's problem statement. Restate it in one sentence, record the domain and the requested scaling tier, and confirm the restatement with the operator before any compilation begins.",
      "servesTruths": [
        "t1"
      ],
      "dependsOn": [],
      "outputHint": "An intake record: one-sentence problem statement, domain, scaling tier, operator confirmation.",
      "ctqIds": [
        "ctq1"
      ]
    }
  ],
  "artifacts": [
    {
      "name": "factory-intake",
      "kind": "skill",
      "disposition": "generate",
      "traceability": {
        "truthIds": [
          "t1"
        ],
        "constraintIds": []
      },
      "l2Rationale": "Intake is an operator-facing procedure, not an enforcement point: a skill is the cheapest intervention that standardizes it without blocking anything.",
      "relationships": {
        "dependsOn": [],
        "complements": [
          "spec-approval-gate"
        ],
        "composesWith": [],
        "supersedes": [],
        "bindsTools": []
      }
    },
    {
      "name": "spec-approval-gate",
      "kind": "gate",
      "disposition": "generate",
      "traceability": {
        "truthIds": [
          "t1"
        ],
        "constraintIds": [
          "c1"
        ]
      },
      "l2Rationale": "The constraint is policy-shaped: only a blocking gate turns approval-before-emit from a remembered rule into an enforced one.",
      "relationships": {
        "dependsOn": [
          "factory-intake"
        ],
        "complements": [],
        "composesWith": [],
        "supersedes": [],
        "bindsTools": []
      }
    },
    {
      "name": "deploy-discipline-hook",
      "kind": "hook",
      "disposition": "generate",
      "traceability": {
        "truthIds": [
          "t2",
          "t3"
        ],
        "constraintIds": []
      },
      "l2Rationale": "Deploy discipline must fire on the deploy action itself: a hook on the deploy path checks draft-PR-only and metrics-manifest presence at the moment they can still be enforced.",
      "relationships": {
        "dependsOn": [
          "spec-approval-gate"
        ],
        "complements": [],
        "composesWith": [],
        "supersedes": [],
        "bindsTools": []
      }
    }
  ],
  "knobs": [
    {
      "name": "scanMinSampleSize",
      "purpose": "Minimum outcome records required before a scan may file an improvement proposal — the factory refuses to propose from noise.",
      "range": {
        "min": 10,
        "max": 100
      },
      "default": 20
    }
  ],
  "methodologyDeps": [
    "first-principles",
    "theory-of-constraints",
    "dmaic"
  ],
  "registryEntry": {
    "targets": [],
    "versions": [],
    "metricsLocations": []
  }
}
"
`;

exports[`emitProcessPack > every emitted text file matches its snapshot > skills/factory-intake/SKILL.md 1`] = `
"---
name: "factory-intake"
description: "Intake is an operator-facing procedure, not an enforcement point: a skill is the cheapest intervention that standardizes it without blocking anything."
version: "0.1.0"
depends_on: []
complements: ["spec-approval-gate"]
composes_with: []
supersedes: []
binds_tools: []
metadata:
  metrics:
    prometheus_prefix: "skill_factory_intake_"
    langfuse_tag: "skill.factory-intake.v0.1.0"
    governance_phase: "shadow"
    decision_rule: "If any CTQ records a defect in a scan window, file an improvement proposal in the needs-review queue; two consecutive defective windows escalate to the operator."
    baseline: "unmeasured"
    ctqs:
      - id: "ctq1"
        persona: "factory operator"
        metric: "spec-approval gate compliance"
        spec_limit: "100% of emitted packs trace to an operator-approved spec"
        defect_definition: "an emitted pack whose spec has no recorded operator approval"
      - id: "ctq2"
        persona: "pack reviewer"
        metric: "pack gate pass rate"
        spec_limit: "every deployed pack passes mechanical validators before its draft PR opens"
        defect_definition: "a draft PR opened from a pack that failed a mechanical validator or lacks its metrics manifest"
      - id: "ctq3"
        persona: "factory operator"
        metric: "scan cadence"
        spec_limit: "every registry entry is scanned at least once per declared cadence window"
        defect_definition: "a registry entry with no scan record inside its cadence window"
---

# factory-intake

## Purpose

Intake is an operator-facing procedure, not an enforcement point: a skill is the cheapest intervention that standardizes it without blocking anything.

## Provenance — traced truths (verbatim)

This skill is justified by these entries in the pack's \`process-spec.json\`
(pack root). If a truth below no longer holds, the skill's justification is
void — report it to the factory rather than working around it.

- **t1** [constraint]: "A process spec must be operator-approved before emission."
  - Rationale: HITL stop-gate at the end of the spec stage; a factory that emits unapproved specs removes the human from the only structural checkpoint.

## Role instructions (roles serving the same truths)

### intake-operator (\`agent-s1\`)

Receive the operator's problem statement. Restate it in one sentence, record the domain and the requested scaling tier, and confirm the restatement with the operator before any compilation begins.

- Output: An intake record: one-sentence problem statement, domain, scaling tier, operator confirmation.
- Accountable CTQs: ctq1

## Related skills

Methodology dependencies of this pack — install and consult alongside:

- \`first-principles\`
- \`theory-of-constraints\`
- \`dmaic\`

## When You're Done

Document what you did and how it went — outcome records are the pack's
sensory half and feed the factory's scan stage.

**What to record:**

- Which steps you followed (or skipped)
- Outcome: success | partial | failed
- If failed: what broke and at what step
- How long it took
- What you'd do differently
"
`;
